# orign-runtime-py

./: .gitignore  Makefile  README.md  cloudbuild.yaml  docker-compose-remote.yaml  docker-compose.yaml  pyproject.toml
deploy/: mod.rs
orign/: arch.md  hf_cache.md  qwen_arch.md
orign/backends/hf/: config.py  main.py  model_factory.py  model_handler.py  seq.py
orign/backends/hf/models/: molmo.py  molmo_working_debug.ipynb  qwen2.py  qwen2_new.ipynb  qwen2_new2.ipynb
orign/backends/vllm/: test.py  test1.py
orign/client/: client.py
orign/server/: config.py  models.py
orign/server/backends/: base.py  base_aio.py
orign/server/backends/doctr/: main.py
orign/server/backends/easyocr/: main.py
orign/server/backends/vllm/: main.py
orign/server/queue/: base.py  factory.py  kafka.py  kafka_aio.py  redis_aio.py
orign/stream/: models.py
orign/stream/processors/: base_aio.py
orign/stream/processors/chat/litellm/: Dockerfile  main.py
orign/stream/processors/chat/vllm/: Dockerfile  main.py
orign/stream/processors/embed/clip/: main.py
orign/stream/processors/embed/sentence_tf/: Dockerfile  main.py
orign_runtime/: __init__.py
orign_runtime/client/: client.py
scratch/: palig2_test.py
tests/: hf_test.py
tests/serve/: easyocr_test.py  hf_test_qwen.py  vllm_test.py  vllm_test_redis.py  vllm_test_redis_stream.py
tests/stream/: doctr_test.py  easyocr_test.py  hf_test_molmo.py  hf_test_paligemma.py  litellm_test.py  sentence_tf_test.py  vllm_test.py  vllm_test_redis.py  vllm_test_redis_molmo.py  vllm_test_redis_qwen.py  vllm_test_redis_stream.py
(+13 files in other folders)
