[tool.poetry]
name = "orign"
version = "0.1.0"
description = "Python client for Orign"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.45.2"
torch = "^2.5.0"
kafka = "^1.3.5"
pillow = "^11.0.0"
confluent-kafka = "^2.6.0"
pytest = "^8.3.3"
accelerate = "^1.0.1"
openai = "^1.52.0"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
